objects/Account.object
<CustomObject>
    <fields>
        <fullName>UPC_NOGA_Economic_Activity__c</fullName>
        <description>The NOGA economic activity, as defined by the Swiss Federal Statistical Office (SFSO)</description>
        <label>NOGA Economic Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crop and animal produc., hunting [A010000]</fullName>
                </value>
                <value>
                    <fullName>Grow. of non-perennial crops [A011000]</fullName>
                </value>
                <value>
                    <fullName>Grow. of cereals and leguminous crops [A011100]</fullName>
                </value>
                <value>
                    <fullName>Grow. of rice [A011200]</fullName>
                </value>
                <value>
                    <fullName>Grow. of vegetables and melons [A011300]</fullName>
                </value>
                <value>
                    <fullName>Grow. of sugar cane [A011400]</fullName>
                </value>
                <value>
                    <fullName>Grow. of tabacco [A011500]</fullName>
                </value>
                <value>
                    <fullName>Grow. of fibre crops [A011600]</fullName>
                </value>
                <value>
                    <fullName>Grow. of other non-perennial crops [A011900]</fullName>
                </value>
                <value>
                    <fullName>Grow. of perennial crops [A012000]</fullName>
                </value>
                <value>
                    <fullName>Grow. of grapes [A012100]</fullName>
                </value>
                <value>
                    <fullName>Grow. of grapes [A012101]</fullName>
                </value>
                <value>
                    <fullName>Viticulture – Vinification and cellaring [A012102]</fullName>
                </value>
                <value>
                    <fullName>Grow. of tropical fruits [A012200]</fullName>
                </value>
                <value>
                    <fullName>Grow. of citrus fruits [A012300]</fullName>
                </value>
                <value>
                    <fullName>Grow. of pome fruits and stone fruits [A012400]</fullName>
                </value>
                <value>
                    <fullName>Grow. of other tree fruits [A012500]</fullName>
                </value>
                <value>
                    <fullName>Grow. of oleaginous fruits [A012600]</fullName>
                </value>
                <value>
                    <fullName>Grow. of beverage crops [A012700]</fullName>
                </value>
                <value>
                    <fullName>Grow. of aromatic and pharma. crops [A012800]</fullName>
                </value>
                <value>
                    <fullName>Grow. of other perennial crops [A012900]</fullName>
                </value>
                <value>
                    <fullName>Plant propagation [A013000]</fullName>
                </value>
                <value>
                    <fullName>Animal production [A014000]</fullName>
                </value>
                <value>
                    <fullName>Rais. of dairy cattle [A014100]</fullName>
                </value>
                <value>
                    <fullName>Rais. of other cattle and buffaloes [A014200]</fullName>
                </value>
                <value>
                    <fullName>Rais. of horses and o. equines [A014300]</fullName>
                </value>
                <value>
                    <fullName>Rais. of camels and camelids [A014400]</fullName>
                </value>
                <value>
                    <fullName>Rais. of sheep and goats [A014500]</fullName>
                </value>
                <value>
                    <fullName>Rais. of swine/pigs [A014600]</fullName>
                </value>
                <value>
                    <fullName>Rais. of poultry [A014700]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_NOGA_Section__c</fullName>
        <description>The NOGA section, standardised by the Swiss NOGA 2008 General Classification of Economic Activities, published by the Swiss Federal Statistical Office (SFSO)</description>
        <label>NOGA Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A) AGRICULT., FORESTRY AND FISHING</fullName>
                </value>
                <value>
                    <fullName>B) MINING AND QUARRYING</fullName>
                </value>
                <value>
                    <fullName>C) MANUFACTURING</fullName>
                </value>
                <value>
                    <fullName>D) ELECTRICITY, GAS A. STEAM SUPPLY</fullName>
                </value>
                <value>
                    <fullName>E) WATER SUPPLY</fullName>
                </value>
                <value>
                    <fullName>F) CONSTRUCTION</fullName>
                </value>
                <value>
                    <fullName>G) TRADE; REP. OF MOTOR VEHICLES A. MOTO.</fullName>
                </value>
                <value>
                    <fullName>H) TRANSPORTATION AND STORAGE</fullName>
                </value>
                <value>
                    <fullName>I) ACCOMOD. AND FOOD SERV. ACT.</fullName>
                </value>
                <value>
                    <fullName>J) INFORMATION AND COMMUNICATION</fullName>
                </value>
                <value>
                    <fullName>K) FINANCIAL AND INSURANCE ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>L) REAL ESTATE ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>M) PROF., SCIENTIFIC AND TECH. ACT.</fullName>
                </value>
                <value>
                    <fullName>N) ADMIN. AND SUPPORT SERV. ACT.</fullName>
                </value>
                <value>
                    <fullName>O) PUBLIC ADMINISTRATION AND DEFENCE</fullName>
                </value>
                <value>
                    <fullName>P) EDUCATION</fullName>
                </value>
                <value>
                    <fullName>Q) HUMAN HEALTH AND SOCIAL WORK ACT.</fullName>
                </value>
                <value>
                    <fullName>R) ARTS, ENTERTAINMENT AND RECREATION</fullName>
                </value>
                <value>
                    <fullName>S) OTHER SERVICE ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>T) ACT. OF HOUSEHOLDS AS EMPLOYERS</fullName>
                </value>
                <value>
                    <fullName>U) ACT. OF EXTRATERRITORIAL ORG. AND BODIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_New_Account_Owner_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell. checked when Approval process is approved.</description>
        <label>New Account Owner Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_New_Account_Owner_Email__c</fullName>
        <description>Created by Nexell this field will store the email of the new Account owner. Used on email templates.</description>
        <formula>UPC_New_Account_Owner__r.Email</formula>
        <label>New Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_New_Account_Owner_Name__c</fullName>
        <description>Created by Nexell. This field will store the new Account owner name to be user on the email templates.</description>
        <formula>UPC_New_Account_Owner__r.FirstName &amp;&apos; &apos;&amp; UPC_New_Account_Owner__r.LastName</formula>
        <label>New Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_New_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell to trigger Account Owner approval process. On approval this field will be user to update the Account Owner.</description>
        <inlineHelpText>Select here a new Account Owner for this Account.</inlineHelpText>
        <label>New Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_New_Owner_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Owner Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Number_of_Locations__c</fullName>
        <description>Field created by Nexell and used to view the number of locations.</description>
        <label>Number of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Number_of_Mobiles__c</fullName>
        <description>Field created by Nexell and used to track the number of mobiles that a customer has.</description>
        <label>Number of Mobiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Number_of_Workspaces__c</fullName>
        <description>Field created by Nexell and used to track the number of Workspaces.</description>
        <label>Number of Workspaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Open_Oppty_Value__c</fullName>
        <description>Field Created by Nexell to show the total value of open Opportunities</description>
        <label>Open Oppy Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Open_Opptys__c</fullName>
        <description>Field Created by Nexell to control the # of Open Opportunities</description>
        <label>Open Oppys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Backup_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Cancellation_Duration__c</fullName>
        <description>Created by Nexell and used to indicate the number of month for contract cancellation.</description>
        <inlineHelpText>Number of Months</inlineHelpText>
        <label>Partner Contract Cancellation Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Category__c</fullName>
        <description>Created by Nexell and used to identify the type of relationship with the partner.</description>
        <label>Partner Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect Sales for UPC</fullName>
                </value>
                <value>
                    <fullName>Support Partner</fullName>
                </value>
                <value>
                    <fullName>Partner as General Contractor</fullName>
                </value>
                <value>
                    <fullName>Cooperation for Integrated Service</fullName>
                </value>
                <value>
                    <fullName>Integrated Digital Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Code__c</fullName>
        <label>Partner Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Commission_Pay_Out_Interval__c</fullName>
        <description>Created by Nexell and used to measure intervals between commission pay-outs.</description>
        <label>Partner Commission Pay-Out Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Cancellation_Date__c</fullName>
        <description>Created by Nexell and used to view the cancellation date of partner contract.</description>
        <label>Partner Contract Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Commission_Model__c</fullName>
        <description>Created by Nexell and used to identify the model of commission on partner contract.</description>
        <label>Partner Contract Commission Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MRC</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell and used to relate created by contact.</description>
        <label>Partner Contract Created by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_End_Date__c</fullName>
        <description>Created by Nexell and used to calculate the contract end date.</description>
        <formula>UPC_Partner_Contract_Cancellation_Date__c + ( UPC_Partner_Cancellation_Duration__c * 30)</formula>
        <label>Partner Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Holder_End_Custome__c</fullName>
        <description>Created by Nexell and used to identify contract holder with customer.</description>
        <label>Partner Contract Holder with Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Renewal_Date__c</fullName>
        <description>Created by Nexell and used to view contract renewal date.</description>
        <label>Partner Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Sign_Date__c</fullName>
        <description>Created by Nexell and used to view the contract signed date.</description>
        <label>Partner Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Signed_by_UPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell and used to relate signed by UPC contact.</description>
        <label>Partner Contract Signed by (UPC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Partner Contract Sign by (UPC))</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Signed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell and used to relate signed by contact.</description>
        <label>Partner Contract Signed by</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Partner Contract Sign by)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Start_Date__c</fullName>
        <description>Created by Nexell and used to view contract start date.</description>
        <label>Partner Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Contract_Type__c</fullName>
        <description>Created by Nexell and used to view the duration of contract type.</description>
        <label>Partner Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_End_Date__c</fullName>
        <description>Created by Nexell and used to view the date partnership ended.</description>
        <label>Partner End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_LAN_Firewall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAN/Firewall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Lifecycle__c</fullName>
        <description>Created by Nexell and used to identify the status of the partner lifecycle.</description>
        <label>Partner Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Activation</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Leaving</fullName>
                </value>
                <value>
                    <fullName>No Longer a Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Multi_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Regions__c</fullName>
        <label>Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aargau</fullName>
                </value>
                <value>
                    <fullName>Appenzell AR</fullName>
                </value>
                <value>
                    <fullName>Appenzell IR</fullName>
                </value>
                <value>
                    <fullName>Basel Land</fullName>
                </value>
                <value>
                    <fullName>Basel Stadt</fullName>
                </value>
                <value>
                    <fullName>Bern Mittelland</fullName>
                </value>
                <value>
                    <fullName>Bern Stadt</fullName>
                </value>
                <value>
                    <fullName>Glarus</fullName>
                </value>
                <value>
                    <fullName>Graubünden</fullName>
                </value>
                <value>
                    <fullName>Luzern</fullName>
                </value>
                <value>
                    <fullName>Schaffhausen</fullName>
                </value>
                <value>
                    <fullName>Schwyz</fullName>
                </value>
                <value>
                    <fullName>Solothurn</fullName>
                </value>
                <value>
                    <fullName>St. Gallen Land</fullName>
                </value>
                <value>
                    <fullName>St. Gallen Stadt</fullName>
                </value>
                <value>
                    <fullName>Tessin</fullName>
                </value>
                <value>
                    <fullName>Thurgau</fullName>
                </value>
                <value>
                    <fullName>Uri</fullName>
                </value>
                <value>
                    <fullName>Zug</fullName>
                </value>
                <value>
                    <fullName>Zürich Knonaueramt</fullName>
                </value>
                <value>
                    <fullName>Zürich Links (Thalwil, Rüschlikon usw.)</fullName>
                </value>
                <value>
                    <fullName>Zürich Oberland</fullName>
                </value>
                <value>
                    <fullName>Zürich Rechts (Küsnacht, Erlenbach usw.)</fullName>
                </value>
                <value>
                    <fullName>Zürich Stadt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Renewal_Planned_Date__c</fullName>
        <description>Created by Nexell and used to view partner renewal planned date.</description>
        <label>Partner Contract Renewal Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Role__c</fullName>
        <description>Created by Nexell and used to identify the role of the partner.</description>
        <label>Partner Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generation of Leads &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>+1st Level Support</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Fulfillment &amp; Support of Defined Project Scope</fullName>
                </value>
                <value>
                    <fullName>Subcontractor to UPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Service__c</fullName>
        <description>Created by Nexell and used to identify the services provided by the partner.</description>
        <label>Partner Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet HFC</fullName>
                </value>
                <value>
                    <fullName>Voice PBX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Skills__c</fullName>
        <description>Created by Nexell and used to identify the partner&apos;s skills.</description>
        <label>Partner Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>IT Helpdesk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Start_Date__c</fullName>
        <description>Created by Nexell and used to view the date partnership started.</description>
        <label>Partner Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Subtype__c</fullName>
        <description>Created by Nexell and used to identify partner&apos;s subtype.</description>
        <label>Partner Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Tax_Number__c</fullName>
        <label>Tax Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Type__c</fullName>
        <description>Created by Nexell and used for partner segmentation.</description>
        <label>Partner Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Sales Partner</fullName>
                </value>
                <value>
                    <fullName>Integration Partner</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Compentence Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_UPC_Role__c</fullName>
        <description>Created by Nexell and used to identify the UPC role with the partner.</description>
        <label>Partner UPC Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fulfillment &amp; Support of service</fullName>
                </value>
                <value>
                    <fullName>Fulfillment of Service</fullName>
                </value>
                <value>
                    <fullName>Delivery of Access / Service to Partner</fullName>
                </value>
                <value>
                    <fullName>Fulfillment &amp; Support of Defined Project Scope</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Partner_Virtual_PBX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual PBX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Voice_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voice Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Product_of_interest__c</fullName>
        <description>Field created by Nexell and used to view the account&apos;s product preferences.</description>
        <label>Product of interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Mobile</fullName>
                </value>
                <value>
                    <fullName>Business Internet</fullName>
                </value>
                <value>
                    <fullName>Business VPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Reason_for_Changing_Owner__c</fullName>
        <description>Created by Nexell as part of the approval process to change an Account Owner.</description>
        <label>Reason for Changing Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Reject_Reason_Code__c</fullName>
        <label>Reject Reason Code</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Risk_Code__c</fullName>
        <label>Risk Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Subsegment__c</fullName>
        <label>Sales Subsegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UPC_Segment_Channel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SME (with HFC)</fullName>
                </value>
                <value>
                    <fullName>SME (w/o HFC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Segment_Channel__c</fullName>
        <description>Field created by Nexell and used to identify segmentation.</description>
        <label>Sales Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>WHS</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                    <isActive>false</isActive>
                    <label>B2C</label>
                </value>
                <value>
                    <fullName>PN</fullName>
                    <isActive>false</isActive>
                    <label>PN</label>
                </value>
                <value>
                    <fullName>SME / SE (with HFC)</fullName>
                    <isActive>false</isActive>
                    <label>SME / SE (with HFC)</label>
                </value>
                <value>
                    <fullName>SME / SME (w/o HFC)</fullName>
                    <isActive>false</isActive>
                    <label>SME / SME (w/o HFC)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Site_Deleted__c</fullName>
        <description>Created by Nexell to track site deletion for an Account.</description>
        <label>Site Deleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Startup__c</fullName>
        <formula>AND(
NOT(ISNULL(UPC_UID__c)),

IF( 
(TODAY() -  UPC_Founding_Date__c ) / 365 * 12 &lt; 1, 1, (TODAY() -  UPC_Founding_Date__c ) / 365 * 12
)&lt;24
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Startup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_SuOF_temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPC SuOF temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to suspend the Account.</description>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_TV_House_Wiring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV House Wiring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_ID__c</fullName>
        <description>Copied from account interfaces System= Taifun Default=true</description>
        <label>Taifun ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Transfer_Opportunities_not_owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell. Transfer open opportunities not owned by you will result in transferring  all open opportunities owned by other users within the account to the new owner.</description>
        <label>Transfer Opportunities Not Owned By You</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>